add_sessions_and_pagination
